build/log/idf_py_stderr_output_197175
/home/pi/remoteLED/main/remoteLED.c: In function 'extract_auth_token':
/home/pi/remoteLED/main/remoteLED.c:94:21: error: 'auth_token' undeclared (first use in this function)
   94 |             strncpy(auth_token, token->valuestring, sizeof(auth_token) - 1);
      |                     ^~~~~~~~~~
/home/pi/remoteLED/main/remoteLED.c:94:21: note: each undeclared identifier is reported only once for each function it appears in
In file included from /home/pi/remoteLED/main/remoteLED.c:5:
/home/pi/remoteLED/main/remoteLED.c:95:22: error: 'TAG' undeclared (first use in this function)
   95 |             ESP_LOGI(TAG, "Extracted JWT Token: %s", auth_token);
      |                      ^~~
/home/pi/esp32/esp-idf/components/log/include/esp_log.h:140:81: note: in definition of macro 'ESP_LOG_LEVEL'
  140 |         if (level==ESP_LOG_ERROR )          { esp_log_write(ESP_LOG_ERROR,      tag, LOG_FORMAT(E, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                 ^~~
/home/pi/esp32/esp-idf/components/log/include/esp_log.h:72:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
   72 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
/home/pi/remoteLED/main/remoteLED.c:95:13: note: in expansion of macro 'ESP_LOGI'
   95 |             ESP_LOGI(TAG, "Extracted JWT Token: %s", auth_token);
      |             ^~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:82: esp-idf/main/CMakeFiles/__idf_main.dir/remoteLED.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6157: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:149: all] Error 2
